Use helper for fa-icons

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -101,9 +101,9 @@
 
           <div class="col-md-2">
             <ul class="list-inline">
-              <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-              <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+              <li><a href="#"><%= fa_icon 'github' %></i></a></li>
+              <li><a href="#"><%= fa_icon 'twitter' %></i></a></li>
+              <li><a href="#"><%= fa_icon 'facebook' %></a></li>
             </ul>
           </div>
 
