make octocat spin

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -101,8 +101,8 @@
 
           <div class="col-md-2">
             <ul class="list-inline">
-              <li><a href="#"><%= fa_icon 'github' %></i></a></li>
               <li><a href="#"><%= fa_icon 'twitter' %></i></a></li>
+              <li><a href="#"><%= fa_icon 'github spin' %></i></a></li>
               <li><a href="#"><%= fa_icon 'facebook' %></a></li>
             </ul>
           </div>
