--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -29,21 +29,13 @@
       </div>
 
       <nav class="navbar navbar-ada" role="navigation">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-        <div class="collapse navbar-collapse navbar-ex1-collapse" id="navbar-collapse-1">
+        <div class="navbar-center">
           <ul class="nav navbar-nav">
             <li><a>БЛОГ</a></li>
             <li><a>РАБОТЫ</a></li>
             <li><a>ОБО МНЕ</a></li>
           </ul>
-        </div><!-- /.navbar-collapse -->
+        </div>
       </nav>
     </div>
 
