Make links to social networks work

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -93,9 +93,9 @@
 
           <div class="col-md-2">
             <ul class="list-inline">
-              <li><a href="#"><%= fa_icon 'twitter' %></i></a></li>
-              <li><a href="#"><%= fa_icon 'github spin' %></i></a></li>
-              <li><a href="#"><%= fa_icon 'facebook' %></a></li>
+              <li><%= link_to fa_icon('twitter'), 'https://twitter.com/spajic1', target: '_blank' %></li>
+              <li><%= link_to fa_icon('github spin'), 'https://github.com/spajic', target: '_blank'  %></li>
+              <li><%= link_to fa_icon('facebook'), 'https://www.facebook.com/alexey.vasilyev.79', target: '_blank' %></li>
             </ul>
           </div>
 
