Make links to blog work

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -35,7 +35,7 @@ html
       .navbar-center
         ul.nav.navbar-nav
           li
-            a БЛОГ
+            =link_to 'БЛОГ', root_path
           li
             a РАБОТЫ
           li
@@ -54,7 +54,7 @@ html
         .col-sm-8
           ul.list-inline
             li
-              a Блог
+              =link_to 'Блог', root_path
             li
               a Работы
             li
