--- a/app/views/blog_posts/overmind.html.slim
+++ b/app/views/blog_posts/overmind.html.slim
@@ -4,7 +4,8 @@
       .caption.header
         span.post-tag #ruby-on-rails
         h1 Foreman to Overmind, или от прораба к надмозгу
-        =image_tag("blog/overmind/overmind_sketch.png", height: '100', align: 'middle')
+        .fixed_height
+          =image_tag("blog/overmind/overmind_sketch.png", class: 'img-responsive')
 
       .section
         h2 Foreman-school
