--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -62,9 +62,9 @@ html
 
         .col-md-2
           ul.list-inline
-            li = link_to fa_icon('twitter'), 'https://twitter.com/spajic1', target: '_blank'
-            li = link_to fa_icon('github spin'), 'https://github.com/spajic', target: '_blank'
-            li = link_to fa_icon('facebook'), 'https://www.facebook.com/alexey.vasilyev.79', target: '_blank'
+            li = link_to fa_icon('twitter 2x'), 'https://twitter.com/spajic1', target: '_blank'
+            li = link_to fa_icon('github 2x spin'), 'https://github.com/spajic', target: '_blank'
+            li = link_to fa_icon('facebook 2x'), 'https://www.facebook.com/alexey.vasilyev.79', target: '_blank'
 
   a#scroll-to-top
     i.fa.fa-angle-up
